# frc-api-rs

./: Cargo.toml  README.md
.github/workflows/: blank.yml
.openapi-generator/: FILES
docs/: DefaultApi.md  EventApi.md  MatchApi.md  TeamApi.md  TeamEventApi.md  TeamMatchApi.md  TeamYearApi.md  YearApi.md
src/apis/: configuration.rs  default_api.rs  event_api.rs  match_api.rs  mod.rs  team_api.rs  team_event_api.rs  team_match_api.rs  team_year_api.rs  year_api.rs
src/models/: http_validation_error.rs  mod.rs  validation_error.rs  validation_error_loc_inner.rs
